--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:700,400,300");
 @import url("https://fonts.googleapis.com/css?family=Anton");
 
 * {
@@ -9,6 +9,14 @@
 body {
   font-family: "Lato", "Helvetica Neue", sans-serif;
   background-color: #f4f4f7;
+}
+
+p {
+  font-weight: 400;
+}
+
+h4 {
+  font-weight: bold;
 }
 
 h1 {
