--- a/src/global.css
+++ b/src/global.css
@@ -32,6 +32,11 @@ a.link-unstyled:hover {
   text-decoration: none;
 }
 
+.Badge__switch {
+  font-family: "Anton";
+  font-weight: 400;
+}
+
 .btn {
   padding: 0.375rem2rem;
 }
